# SAAD_System

./: .goutputstream-KE3932  camera_pi.py  escControl.py  magnetometerLibrary.py  oldControl.txt  web_server.py  worker.py
SynexensSDK_4.2.3.0_armv8_202410181719/demo/: SDKTest.cpp  SYDataDefine.h  SYSDKInterface.h
SynexensSDK_4.2.3.0_armv8_202410181719/include/: SYSDKInterface.h
SynexensSDK_4.2.3.0_armv8_202410181719/thirdpart/opencv440/lib/: libopencv_calib3d.so.4.4  libopencv_calib3d.so.4.4.0  libopencv_features2d.so.4.4  libopencv_features2d.so.4.4.0  libopencv_flann.so.4.4  libopencv_highgui.so.4.4.0  libopencv_imgcodecs.so.4.4  libopencv_ml.so.4.4  libopencv_ml.so.4.4.0  (+9 more)
Testing/: escTest.py  gps_test.py  mainProgram.py
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
pythonTestLidar/: SynexensSDK_4.2.1.0_armv8.tar.xz  SynexensSDK_4.2.3.0_armv8.tar.xz
pythonTestLidar/SynexensPythonSDK_4.2.1.0_windows_20240617182111/: SYPythonDataDefine.py  SynexensPythonSDK.py  SynexensTest.py  Test.py  objectDetect.py  objectDetect1.py  objectDetect2.py  thbd.py
pythonTestLidar/SynexensPythonSDK_4.2.1.0_windows_20240617182111/log/: SYSDKLog.txt
pythonTestLidar/SynexensPythonSDK_4.2.1.0_windows_20240617182111/parameters/: 640_480_HV0120711C0412
pythonTestLidar/SynexensSDK_4.2.1.0_armv8_202406180956/demo/: CMakeCache.txt  CMakeLists.txt  Makefile  SDKTest.cpp  cmake_install.cmake
site/: web_server.py  worker.py
site/templates/: index.html  index2.html
src/saad_controller/: CMakeLists.txt
src/static/: index.html
src/thruster_control/: package.xml  setup.py
src/thruster_control/thruster_control/: thruster_control_keyboard.py  thruster_control_teleop.py
templates/: index.html
(+19 files in other folders)
